<resources>
    <string name="app_name">Diagnostics V.1</string>
    <string name="sifu">СИФУ</string>
    <string name="N_zad">N#</string>
    <string name="alert_dialog_start">Начало диагностики.</string>
    <string name="dialog_nZad_Zad_ZIS">Происходит режим разгона/торможения!</string>
    <string name="ZIS">ЗИС</string>
    <string name="ChF">Проверка чередования фаз</string>
    <string name="LimSp">Speed Limit</string>
    <string name="dialog_nZadR_0_ZIS">Необх просм. коэф интенсивности!</string>
    <string name="dialog_nZad_Zad">Подано задание!</string>
    <string name="alert_dialog_neutral">Настройка</string>
    <string name="naladka_dialog">Наладка агрегата</string>
    <string name="alert_naladka_start">Наладка</string>

    <!--Пункты выпадающего меню-->
    <string name="action_settings">Settings</string>
    <string name="BD">SQLite</string>
    <string name="JSON">JSON</string>
    <string name="webJSON">webJSON</string>
    <string name="openFile">Open File</string>
    <string name="search_wifi">Search wi-fi</string>
    <string name="read_data">Read data</string>
    <string name="Stop_Net">Stop_Net</string>
    <string name="StopData">StopData</string>
    <string name="Clear">Clear</string>


</resources>
