<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <!--Пункт меню для заполнения хранилища из БД -->
    <item
        android:id="@+id/BD"
        android:orderInCategory="100"
        android:title="@string/BD"
        app:showAsAction="never"/>
    <!--ПУнкт меню для заполнения хранилища из JSON -->
    <item
        android:id="@+id/JSON"
        android:orderInCategory="100"
        android:title="@string/JSON"
        app:showAsAction="never"/>
    <!--ПУнкт меню для заполнения хранилища из webJSON -->
    <item
        android:id="@+id/webJSON"
        android:orderInCategory="100"
        android:title="@string/webJSON"
        app:showAsAction="never"/>
    <!-- Open file with data webJson or other-->
    <item
        android:id="@+id/openFile"
        android:orderInCategory="100"
        android:title="@string/openFile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/search_wifi"
        android:orderInCategory="100"
        android:title="@string/search_wifi"
        app:showAsAction="never"/>
    <item
        android:id="@+id/read_data"
        android:orderInCategory="100"
        android:title="@string/read_data"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Stop_Net"
        android:orderInCategory="100"
        android:title="@string/Stop_Net"
        app:showAsAction="never"/>
    <item
        android:id="@+id/StopData"
        android:orderInCategory="100"
        android:title="@string/StopData"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Clear"
        android:orderInCategory="100"
        android:title="@string/Clear"
        app:showAsAction="never"/>

</menu>